--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
+*{
+    box-sizing: border-box;
+}
 body{
-    font-family: Arial, Helvetica, sans-serif, "proxima nova light", "Helvetica Neue";
-    background-color: lightblue;
+    font-family: 'Courier New', Courier, monospace;
+    
     color: black;
-    font-size: 24px;
+    border: 5px solid rosybrown;
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
+
 }
 
 a {
@@ -10,16 +17,42 @@ a {
     text-decoration: none;
 }
 
-img {
-    width: 3.75rem;
+header{
+    grid-column: 1 / 3;
+    grid-row: 1/2;
 }
 
-main {
+main{
+    border: 5px solid teal  ;
+    grid-column: 1/3;
+    grid-row: 2/3;
+    background: peru;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-section{
+footer{
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+
+nav{    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav a:hover{
+    background-color: turquoise;
+}
+  
+    /*grid-template-columns: repeat(auto-fit, minmax(250px,1fr));*/
+
+article{
+    border: 5px solid white;
     flex: 1 1 250px;
     margin: 10px;
     padding: 10px;
@@ -32,4 +65,14 @@ section{
 
 .right{
     background-color: thistle;
+}
+
+img {
+    width: 2rem;
+}
+
+article img{
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%
 }
