--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,8 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Courier New', Courier, monospace;
-    
+    font-family: 'Courier New', Courier, monospace;    
     color: black;
-    border: 5px solid rosybrown;
     display: grid;
     grid-template-rows: auto auto auto;
     grid-template-columns: auto auto auto;
@@ -23,7 +21,6 @@ header{
 }
 
 main{
-    border: 5px solid teal  ;
     grid-column: 1/3;
     grid-row: 2/3;
     background: peru;
@@ -40,7 +37,7 @@ footer{
 
 
 nav{    
-    display: flex;
+    display: grid;
     justify-content: space-around;
     align-items: center;
 }
@@ -52,18 +49,18 @@ nav a:hover{
     /*grid-template-columns: repeat(auto-fit, minmax(250px,1fr));*/
 
 article{
-    border: 5px solid white;
     flex: 1 1 250px;
     margin: 10px;
     padding: 10px;
     text-align: center;
+    box-shadow: 0 3px 10px rgb(0 0 250 / 0.4);
 }
 
-.left{
+article:first-of-type{
     background-color: antiquewhite;
 }
 
-.right{
+article:last-of-type{
     background-color: thistle;
 }
 
